<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_orange_dark"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="300px"
        android:layout_height="300px"
        android:backgroundTintMode="add"
        app:srcCompat="@drawable/login" />
    <EditText
        android:layout_width="800px"
        android:layout_height="wrap_content"
        android:hint="@string/user"
        android:layout_marginTop="10dp"
        android:textSize="20sp"
        android:inputType="textEmailAddress"
        android:textStyle="bold|italic"/>
    <EditText
        android:layout_width="800px"
        android:layout_height="wrap_content"
        android:hint="@string/pass"
        android:layout_marginTop="10dp"
        android:textSize="20sp"
        android:inputType="textPassword"
        android:textStyle="bold|italic"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:backgroundTint="@android:color/holo_orange_dark"
        android:text="@string/texto1"
        android:textColor="?attr/colorPrimaryVariant"
        android:textSize="16sp"
        android:textStyle="italic" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:backgroundTint="@android:color/holo_orange_dark"
        android:text="@string/texto2"
        android:textColor="?attr/colorPrimaryVariant"
        android:textSize="16sp"
        android:textStyle="italic" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:layout_marginTop="10dp"
        android:textSize="20sp"
        android:textStyle="bold|italic"/>
</LinearLayout>