<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_orange_dark"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".RegistroUser">

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="10dp"
        app:srcCompat="@drawable/nuevouser" />

    <EditText
        android:id="@+id/et_reg_name"
        android:layout_width="800px"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/nombre"
        android:inputType="textPersonName"
        android:textSize="20sp"
        android:textStyle="bold|italic" />

    <EditText
        android:id="@+id/et_reg_mail"
        android:layout_width="800px"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/correo"
        android:inputType="textEmailAddress"
        android:textSize="20sp"
        android:textStyle="bold|italic" />

    <EditText
        android:id="@+id/et_reg_pass1"
        android:layout_width="800px"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/pass"
        android:inputType="textPassword"
        android:textSize="20sp"
        android:textStyle="bold|italic" />

    <EditText
        android:id="@+id/et_reg_pass2"
        android:layout_width="800px"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/pass1"
        android:inputType="textPassword"
        android:textSize="20sp"
        android:textStyle="bold|italic" />

    <Button
        android:id="@+id/btn_reg_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/registrar"
        android:textSize="20sp"
        android:textStyle="bold|italic" />

</LinearLayout>