<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/rest"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".Inicio">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="0.2"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/universidad"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="#FFC107"
            android:textSize="24sp"
            android:textStyle="bold|italic" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/facultad"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="#FFC107"
            android:textSize="20sp"
            android:textStyle="bold|italic" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/carrera"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="#FFC107"
            android:textSize="20sp"
            android:textStyle="bold|italic" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="0.7"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Univ1: "
                android:textAllCaps="false"
                android:textColor="#FFC107"
                android:textSize="18sp"
                android:textStyle="bold|italic" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Univ2: "
                android:textAllCaps="false"
                android:textColor="#FFC107"
                android:textSize="18sp"
                android:textStyle="bold|italic" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Univ3: "
                android:textAllCaps="false"
                android:textColor="#FFC107"
                android:textSize="18sp"
                android:textStyle="bold|italic" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Docente: "
                android:textAllCaps="false"
                android:textColor="#FFC107"
                android:textSize="18sp"
                android:textStyle="bold|italic" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/univ1"
                android:textAllCaps="false"
                android:textColor="#FFC107"
                android:textSize="18sp"
                android:textStyle="bold|italic" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/univ2"
                android:textAllCaps="false"
                android:textColor="#FFC107"
                android:textSize="18sp"
                android:textStyle="bold|italic" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/univ3"
                android:textAllCaps="false"
                android:textColor="#FFC107"
                android:textSize="18sp"
                android:textStyle="bold|italic" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/docente"
                android:textAllCaps="false"
                android:textColor="#FFC107"
                android:textSize="18sp"
                android:textStyle="bold|italic" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>